updating gitignore files to not includes csv, xlsx, rds, tiff, png, and jpeg files

--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,13 @@ po/*~
 
 # RStudio Connect folder
 rsconnect/
+
+# additional data files to ignore
+*.csv
+*.xlsx
+*.RDS
+
+# additional visuals to ignore
+*.tiff
+*.png
+*.jpeg
